# credo

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  dev.sh  docker-compose.yml  docs  seed.sh  test.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  database.py  main.py  pyproject.toml  serializers.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_extensions.py  0002_users.py  0003_user_profiles.py  0004_geographies.py  0005_metrics.py  0006_metric_values.py  0007_agendas.py  0008_seed_metric_values.py  0009_chicago_counties.py  0010_metric_values_period.py  0011_agenda_geographies.py  0012_credos_and_entities.py  0013_entity_events_and_decouple.py  0014_agenda_means.py  0015_event_provenance.py  0016_entity_slug.py  0017_means_repository.py  0018_axes_library.py  0019_beliefs_library.py  0020_issues_library.py  0021_credo_owner.py  0022_rename_example_credo.py  0023_credo_subscriptions.py  0024_user_beliefs.py
backend/credo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/models/: __init__.py  agenda.py  credo.py  geography.py  metric.py  user.py
backend/routes/: agendas.py  auth.py  axes.py  beliefs.py  credos.py  entities.py  geographies.py  issues.py  metrics.py
backend/schemas/: agenda.py  belief.py  credo.py  entity.py  geography.py  metric.py  user.py
backend/scripts/: load_chicago_counties.py  load_cook_county.py  scrape_politician_stances.py  seed_politicians.py  smoke_credo_writes.py  test_scrape.py
backend/tests/: conftest.py  test_health.py
frontend/: .stylelintrc.json  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
svelte-output/: +layout.svelte
(+80 files in other folders)
