[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credo-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "fastapi-users[sqlalchemy]>=13",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",  # sync driver Alembic uses (env.py strips +asyncpg)
    "geoalchemy2>=0.14",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyshp>=2.3",
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
# asyncio_mode = "auto" lets us write `async def test_*` without per-test decorators.
# pythonpath = "." puts the backend root on sys.path so tests can `from main import app`.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
